--- a/Gamoitsani/Source/Modules/Game/GameSettings/Cell/GameSettingsTeamTableViewCell/GameSettingsTeamTableViewCell.xib
+++ b/Gamoitsani/Source/Modules/Game/GameSettings/Cell/GameSettingsTeamTableViewCell/GameSettingsTeamTableViewCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GameSettingsTeamTableViewCell" id="KGk-i7-Jjw" customClass="GameSettingsTeamTableViewCell" customModule="Gamoitsani" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="GameSettingsTeamTableViewCell" id="KGk-i7-Jjw" customClass="GameSettingsTeamTableViewCell" customModule="Gamoitsani" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -35,10 +36,16 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" name="Secondary"/>
             <connections>
                 <outlet property="teamName" destination="0yc-bb-0Lv" id="p7B-f7-bZm"/>
             </connections>
             <point key="canvasLocation" x="60" y="20"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="Secondary">
+            <color red="0.16470588235294117" green="0.5725490196078431" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
