--- a/Gamoitsani/Source/Modules/Game/Game/Views/GameInfo/GameInfoView.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Views/GameInfo/GameInfoView.xib
@@ -22,6 +22,9 @@
                     </constraints>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="showScoreAction:" destination="X2f-M8-weE" eventType="touchUpInside" id="eKz-2z-ea8"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jyn-gU-8dL" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
                     <rect key="frame" x="105" y="150" width="100" height="100"/>
@@ -78,7 +81,7 @@
     </objects>
     <resources>
         <namedColor name="Secondary">
-            <color red="0.16470588235294117" green="0.5725490196078431" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.27843137254901962" green="0.33725490196078434" blue="0.65098039215686276" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
