--- a/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Xib/GameViewController.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseViewController" customModule="Gamoitsani" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GameViewController" customModule="Gamoitsani" customModuleProvider="target">
             <connections>
                 <outlet property="mainView" destination="DOp-si-W3S" id="dVn-xl-nw5"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Ear-na-QPK"/>
